Added blacklist using the same dfs function but a different function to check for done.

--- a/jschecker.html
+++ b/jschecker.html
@@ -17,6 +17,7 @@
           var code = $(this).val();
           var ast = esprima.parse(code);
           whitelist(ast, ["VariableDeclaration", "ReturnStatement"]);
+          blacklist(ast, ["ForStatement"]);
         });
       });
     </script>
