Added structure using the same dfs function. Wrote descriptions of the functions. TODO fix descriptions to make them more readable.

--- a/jschecker.html
+++ b/jschecker.html
@@ -16,8 +16,18 @@
         $("textarea").on("keyup", function() {
           var code = $(this).val();
           var ast = esprima.parse(code);
-          whitelist(ast, ["VariableDeclaration", "ReturnStatement"]);
+
+          whitelist(ast, [
+            "VariableDeclaration", "ReturnStatement"
+          ]);
           blacklist(ast, ["ForStatement"]);
+          structure(ast, {
+            "type": "FunctionDeclaration", 
+            "body": [
+              {"type": "ReturnStatement"}, 
+              {"type": "VariableDeclaration"}
+            ]
+          });
         });
       });
     </script>
