--- a/jschecker.html
+++ b/jschecker.html
@@ -12,35 +12,36 @@
     <script type="text/javascript" src="esprima.js"></script>
     <script type="text/javascript" src="jschecker.js"></script>
     <script type="text/javascript">
+
+      function writeFeedback(result, $feedbackdiv, message) {
+        if (result.length == 0) {
+          $feedbackdiv.addClass("passed").removeClass("failed").html("Passed!");
+        }
+        else {
+          $feedbackdiv.addClass("failed").removeClass("passed").html(message+JSON.stringify(result));
+        }
+      }
+
       $(document).ready(function() {
-        var whitelistReqs = [];
-        var blacklistReqs = [];
-        var structureReqs = $("#structure").text();
+        var whitelistReqs = ["VariableDeclaration", "ReturnStatement"];
+        var blacklistReqs = ["ForStatement"];
+        var structureReqs = {"type": "FunctionDeclaration", "body": [{"type": "ReturnStatement"}, {"type": "VariableDeclaration"}]};
 
-        $("#whitelistForm").on("change", function() {
-          var whitelistReqs = $("#whitelistForm input:checked").map(function(){
-              return $(this).val();
-            }).get();
-        });
-
-        $("#blacklistForm").on("change", function() {
-          var blacklistReqs = $("#blacklistForm input:checked").map(function(){
-              return $(this).val();
-            }).get();
-        });
-
-        $("#structure").on("keyup", function() {
-          structureReqs = $(this).text();
-          console.log(structureReqs);
-        });
+        $("#whitelist .requirements").html("<h3>You must have these in your code:</h3>"+whitelistReqs);
+        $("#blacklist .requirements").html("<h3>You cannot have these in your code:</h3>"+blacklistReqs);
+        $("#structure .requirements").html("<h3>Your code must have this structure:</h3>"+JSON.stringify(structureReqs));
 
         $("#code").on("keyup", function() {
           var code = $(this).val();
           var ast = esprima.parse(code);
 
-          whitelist(ast, whitelistReqs);
-          blacklist(ast, blacklistReqs);
-          structure(ast, structureReqs);
+          var whitelistResult = whitelist(ast, whitelistReqs);
+          var blacklistResult = blacklist(ast, blacklistReqs);
+          var structureResult = structure(ast, structureReqs);
+
+          writeFeedback(whitelistResult, $("#whitelist .feedback"), "You're missing: ");
+          writeFeedback(blacklistResult, $("#blacklist .feedback"), "You have: ");
+          writeFeedback(structureResult, $("#structure .feedback"), "You're missing: ");
         });
       });
     </script>
@@ -54,33 +55,18 @@
         <textarea id="code"></textarea>
       </div>
       <span id="feedbackColumn">
-        <h1>Requirements</h1>
-        Must have: <br />
-        <form id="whitelistForm">
-          <input type="checkbox" value="VariableDeclaration">Variable<br>
-          <input type="checkbox" value="FunctionDeclaration">Function<br>
-          <input type="checkbox" value="ForStatement">For Loop<br>
-          <input type="checkbox" value="ReturnStatement">Return Statement<br>
-          <input type="checkbox" value="BlockStatement">Block
-        </form>
-        Cannot have: <br />
-        <form id="blacklistForm">
-          <input type="checkbox" value="VariableDeclaration">Variable<br>
-          <input type="checkbox" value="FunctionDeclaration">Function<br>
-          <input type="checkbox" value="ForStatement">For Loop<br>
-          <input type="checkbox" value="ReturnStatement">Return Statement<br>
-          <input type="checkbox" value="BlockStatement">Block
-        </form>
-        Structure: <br />
-        <textarea id="structure">
-{
-  "type": "FunctionDeclaration", 
-  "body": [
-    {"type": "ReturnStatement"}, 
-    {"type": "VariableDeclaration"}
-  ]
-}
-        </textarea>
+        <div id="whitelist">
+          <div class="requirements"></div>
+          <div class="feedback"></div>
+        </div>
+        <div id="blacklist">
+          <div class="requirements"></div>
+          <div class="feedback"></div>          
+        </div>
+        <div id="structure">
+          <div class="requirements"></div>
+          <div class="feedback"></div>
+        </div>
       </span>
     </div>
   </body>
