--- a/jschecker.html
+++ b/jschecker.html
@@ -3,11 +3,6 @@
     <title>Javascript code checker</title>
     <link href="style.css" rel="stylesheet" />
 
-    <!--
-    I decided to choose esprima as my js parser. I tried the performance test on esprima's website (http://esprima.org/test/compare.html) and esprima performed slightly better than acorn.
-    Additionally, its documentation is more user friendly than acorn's. Acorn displays its entire code base and documents every line. While this is useful to see how short the document is, it's too much information. Esprima's documentation is much easier to "parse" (haha).
-    Also, acorn does not provide any examples, while esprima provides several. Finally, esprima describes the form of its output, while acorn does not. Presumably they are the same output, but it would be great to know this ahead of time before running the code.
-    -->
     <script type="text/javascript" src="jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="esprima.js"></script>
     <script type="text/javascript" src="jschecker.js"></script>
@@ -23,9 +18,16 @@
       }
 
       $(document).ready(function() {
+        /****************************************************
+        To test the API, change the variables whitelistReqs, blacklistReqs, and structureReqs below.
+
+        whitelistReqs and blacklistReqs must take the form of a list of types, with the same official names that the esprima parser uses to identify types (for example, VariableDeclaration, FunctionDeclaration, ForStatement, BlockStatement, ReturnStatement).
+
+        structureReqs must take the form of a modified esprima ast. Every node is of the form {"type": typeName} and has an optional attribute "body", which may have a single node or a list of nodes as its value.
+        *****************************************************/
         var whitelistReqs = ["VariableDeclaration", "ReturnStatement"];
         var blacklistReqs = ["ForStatement"];
-        var structureReqs = {"type": "FunctionDeclaration", "body": [{"type": "ReturnStatement"}, {"type": "VariableDeclaration"}]};
+        var structureReqs = [{"type": "FunctionDeclaration", "body": [{"type": "ReturnStatement"}, {"type": "VariableDeclaration"}]}];
 
         $("#whitelist .requirements").html("<h3>You must have these in your code:</h3>"+whitelistReqs);
         $("#blacklist .requirements").html("<h3>You cannot have these in your code:</h3>"+blacklistReqs);
